// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SquareSpin> <SquareSpin> Mount: enzyme.mount 1`] = `
.css-0 > div,
[data-css-0] > div {
  animation-fill-mode: both;
  animation: animation_7yf550 3s 0s cubic-bezier(.09,.57,.49,.9) infinite;
  background: #ffffff;
  height: 50px;
  width: 50px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_7yf550 3s 0s cubic-bezier(.09,.57,.49,.9) infinite;
}

<SquareSpin
  loading={true}
>
  <div
    data-css-0=""
  >
    <div />
  </div>
</SquareSpin>
`;

exports[`<SquareSpin> <SquareSpin> Render: enzyme.render 1`] = `
.css-0 > div,
[data-css-0] > div {
  animation-fill-mode: both;
  animation: animation_7yf550 3s 0s cubic-bezier(.09,.57,.49,.9) infinite;
  background: #ffffff;
  height: 50px;
  width: 50px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_7yf550 3s 0s cubic-bezier(.09,.57,.49,.9) infinite;
}

<div
  data-css-0=""
>
  <div />
</div>
`;

exports[`<SquareSpin> <SquareSpin> Shallow: enzyme.shallow 1`] = `
.css-0 > div,
[data-css-0] > div {
  animation-fill-mode: both;
  animation: animation_7yf550 3s 0s cubic-bezier(.09,.57,.49,.9) infinite;
  background: #ffffff;
  height: 50px;
  width: 50px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_7yf550 3s 0s cubic-bezier(.09,.57,.49,.9) infinite;
}

<div
  data-css-0=""
>
  <div />
</div>
`;
